syntax = "proto3";

package public_pb;
import "google/protobuf/timestamp.proto";
option go_package = "plbooking_go_structure1/internal/pb/public_proto";

message User {
    string first_name=1;
    string last_name=2;
    string email=3;
    string phone_number=4;
    google.protobuf.Timestamp created_at=5;
}